# cargo-rename

./: Cargo.toml  LICENSE-MIT  README.md  release.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/: cli.rs  error.rs  lib.rs  main.rs  ops.rs  validation.rs
src/cargo/: dependency.rs  mod.rs  package.rs  workspace.rs
src/command/: mod.rs  rename.rs
src/fs/: mod.rs  transaction.rs
src/ops/: content.rs  manifest.rs  mod.rs  transaction.rs
src/rewrite/: mod.rs  rust.rs
src/steps/: rename.rs
src/verify/: mod.rs  preflight.rs  prompt.rs  rules.rs
tests/: edge_cases.rs  edge_cases_tests.rs  integration_tests.rs  move_only_tests.rs  move_tests.rs  rename_tests.rs  validation_tests.rs
tests/common/: mod.rs
