[package]
name = "cargo-rename"
version = "0.1.0"
edition = "2024"
authors = ["Nelson Dominguez <ekkolon@proton.me>"]
description = "Safely rename Cargo packages and update all workspace references"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ekkolon/cargo-rename"
keywords = ["cargo", "rename", "refactor", "workspace"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[[bin]]
name = "cargo-rename"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.23"
clap = { version = "4.5", features = ["derive"] }
colored = "3.1"
env_logger = "0.11"
log = "0.4"
pathdiff = "0.2"
regex = "1.10"
thiserror = "2.0"
toml_edit = "0.23.9"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.10"


[lints.rust]
unsafe_code = { level = "forbid" }
