[package]
name = "cargo-rename"
version = "0.1.2"
edition = "2024"
authors = ["Nelson Dominguez <ekkolon@proton.me>"]
description = "Rename Cargo packages with confidence"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ekkolon/cargo-rename"
keywords = ["cargo", "rename", "refactor", "workspace"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
include = ["README.md", "LICENSE-MIT", "LICENSE-APACHE", "src/**/*.rs"]

[[bin]]
name = "cargo-rename"
path = "src/main.rs"

[dependencies]
cargo_metadata = "0.23"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"

syn = { version = "2", features = ["full"] }
ignore = "0.4"
pathdiff = "0.2"
regex = "1.12"
toml_edit = "0.23.9"

anyhow = "1"
thiserror = "2.0"
env_logger = "0.11.8"
log = "0.4"
colored = "3.1"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.10"


[lints.rust]
unsafe_code = { level = "forbid" }
